Revision history for HTML::Forms

          - Changed event register method name in JS utils
          - Added some more POD
          - Completed placeholders for POD
          - Shiny buttons for DataStructure
          - Added number of pages and page size to renderer
          - Only 20 more field classes to add POD boilerplate
          - All POD boilerplate except for field classes
          - More POD link fixes
          - Fixes POD links in markdown
          - Completed first pass at POD in HTML::Forms
          - Renamed JS files
          - Supports multipage forms
          - DataStructure rows can now be readonly
          - Adds more JS rendered field types
          - Adds EmptyDiv for JS rendering
          - Field constructors for attributes now methods not functions
          - Just throw exceptions from Manager
          - Field default_over_obj now just a bool
          - Moves get_body_parameters to Context
          - Moved onReady function to utils
          - Buttons now position on the right when required
          - Renames JS files
          - Adds drag title and icons to DataStructure field type
          - Adds Selector field type
          - Adds reveal password
          - Moves repeatable JS to utils
          - Inline server field validation
          - Shiny buttons
          - Adding Digits field type
          - Better error messages
          - Renamed Forms before/after build to before/after build fields
          - Regenerate meta data
          - Adds empty English lexicon
          - Hiding adds/remove class. Leaves display alone
          - Adds Image field. Adds showIfRequired
          - Better styling on form errors
          - CSS fonts
          - Label and colon right CSS improved
          - Started adding pod
          - Fiddled with label right
          - Better styling
          - Constants exports username
          - Adds timezone field
          - Looks labels up on the model
          - Adds action to forms