@@ -8,6 +8,7 @@
     checkbox-true-bg: seagreen;
     close: firebrick;
     disabled: gray;
+    ds-tile-bg: ivory;
     error-bg: lightpink;
     field-active: bisque;
     field-border: gainsboro;
@@ -34,6 +35,7 @@
     button-disabled-bg: linear-gradient(
         0deg, #colours[button-disabled-bg], whitesmoke
     );
+    ds-tile: linear-gradient(0deg, whitesmoke, #colours[ds-tile-bg]);
     error-fade: linear-gradient(to right, transparent, #colours[error-bg] 80%);
 }
 #sizes() {
@@ -57,8 +59,21 @@ form.classic {
     .alert-info {
         font-size: 0.8rem; padding: 0.5rem 0 0;
     }
+    .ds-add-icon {
+        background: #grads[button-bg]; border-radius: 3px;
+        box-shadow: 2px 2px 2px #colours[panel-shadow];
+        color: #colours[checkbox-true-bg]; cursor: pointer;
+        font-family: #fonts[system]; font-size: smaller;
+        font-weight: bold; padding: 0.25rem;
+        svg {
+            vertical-align: middle;
+        }
+    }
+    .ds-add-icon:hover {
+        box-shadow: inset 0 0 3px #colours[panel-shadow];
+    }
     .ds-form {
-        border-spacing: 0; position: relative;
+        border-spacing: 0 0.5rem; position: relative;
         th {
             font-family: #fonts[system]; font-size: 0.8rem; font-weight: normal;
         }
@@ -66,8 +81,9 @@ form.classic {
             vertical-align: middle;
         }
         tr.separate {
+            background: #grads[ds-tile];
+            border-radius: 5px; box-shadow: 3px 3px 3px #colours[line];
             .ds-field, .ds-remove {
-                border-bottom: 1px solid #colours[line];
                 padding-bottom: 0.5rem;
             }
         }
@@ -95,8 +111,8 @@ form.classic {
                 color: #colours[close]; cursor: pointer; display: flex;
                 font-family: #fonts[system]; font-size: smaller;
                 font-weight: bold; height: 100%; padding: 0 0.25rem;
-                img {
-                    height: 16px; width: 16px; vertical-align: middle;
+                img, svg {
+                    height: 20px; width: 20px; vertical-align: middle;
                 }
             }
             .ds-remove-icon:hover {
@@ -189,6 +205,9 @@ form.classic {
             display: table-cell; font-family: #fonts[data];
             max-width: #sizes[field-max];
         }
+        textarea {
+            min-width: #sizes[field-max];
+        }
         input, select.select-multiple, textarea {
             border-radius: 5px; font-size: 0.85rem;
         }
@@ -277,6 +296,12 @@ form.classic {
             span, svg {
                 font-size: 0.7rem; letter-spacing: 0.1rem; position: relative;
                 text-decoration: none; text-transform: uppercase; z-index: 3;
+            }
+            span.icon-wrapper {
+                display: block;
+                svg {
+                    vertical-align: top;
+                }
             }
         }
         button:hover {
